--- a/autofare.html
+++ b/autofare.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/car.css">
+    <link rel="stylesheet" href="car.css">
 </head>
 <body>
     <div class="wrapper">
@@ -14,7 +14,7 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545330190_e179a70637.jpg)">
                               <div class="inner">
-                                  <p>中運量膠輪系統VAL256型</p>
+                                  <p>自動收費說明1</p>
                     <span>1996-</span>
                               </div>
                           </div>
@@ -29,7 +29,7 @@
                       <div class="container">
                           <div class="front" style="background-image:url(https://live.staticflickr.com/65535/53641202607_ed01b24ffc_q.jpg)">
                               <div class="inner">
-                                  <p>中運量電聯車BT370型</p>
+                                  <p>自動收費說明2</p>
                     <span>2006-</span>
                               </div>
                           </div>
@@ -44,7 +44,7 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642535460_fbb1301767.jpg)">
                               <div class="inner">
-                                  <p>環狀線電聯車中運量鋼輪610型</p>
+                                  <p>自動收費說明3</p>
                     <span>2020-</span>
                               </div>
                           </div>
@@ -59,7 +59,7 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545238089_0b931f2920.jpg)">
                               <div class="inner">
-                                  <p>中運量電聯車</p>
+                                  <p>自動收費說明4</p>
                     <span>2020-</span>
                               </div>
                           </div>
@@ -74,7 +74,7 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642318378_8fd1dfaa4f_m.jpg">
                               <div class="inner">
-                                  <p>重運量電聯車301</p>
+                                  <p>自動收費說明5</p>
                     <span>1992-</span>
                               </div>
                           </div>
@@ -89,7 +89,7 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545103748_0cb41ece0c.jpg)">
                               <div class="inner">
-                                  <p>重運量電聯車341</p>
+                                  <p>自動收費說明6</p>
                     <span>2003-</span>
                               </div>
                           </div>
@@ -104,7 +104,7 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53641215022_0a9287749e_w.jpg)">
                               <div class="inner">
-                                  <p>重運量電聯車371</p>
+                                  <p>自動收費說明7</p>
                     <span>2008-</span>
                               </div>
                           </div>
@@ -120,7 +120,7 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642274903_8bce108c46_b.jpg)">
                               <div class="inner">
-                                  <p>重運量電聯車381</p>
+                                  <p>自動收費說明8</p>
                     <span>2010-</span>
                               </div>
                           </div>
