--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>臺北捷運機電系統介紹</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+    <!-- <link rel="stylesheet" href="car.css"> -->
     <link rel="stylesheet" href="style.css">
+    
 
 </head>
 <body>
