--- a/supply.html
+++ b/supply.html
@@ -12,122 +12,120 @@
         <div class="cols">
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545330190_e179a70637.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53670902304_1499018e06_w.jpg)">
                               <div class="inner">
                                   <p>主變電站</p>
-                    <span>1996-</span>
+                    <span>BSS</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                <p>迴路的161kV超高壓電力，互為備援，自動切換。</p>
+                                <p>引接臺電161仟伏電力，轉換22仟伏電力提供捷運系統電力主要來源。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image:url(https://live.staticflickr.com/65535/53641202607_ed01b24ffc_q.jpg)">
+                          <div class="front" style="background-image:url(https://live.staticflickr.com/65535/53669677107_be5a86ec32_w.jpg)">
                               <div class="inner">
-                                  <p>推進電力設備</p>
-                    <span>2006-</span>
+                                  <p>車站變電站</p>
+                    <span>FPSS</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>包括了22kV開關盤、整流變壓器及直流高速斷路器等重要設備，安裝於各車站的機房內。</p>
+                                  <p>接受主變電站22仟伏電力，轉換為380伏特電力提供車站用電來源。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642535460_fbb1301767.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53670878999_f0646d3742_n.jpg)">
                               <div class="inner">
-                                  <p>供電說明3</p>
-                    <span>2020-</span>
+                                  <p>牽引動力變電站</p>
+                    <span>PPSS</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>日立軌道義大利無人駕駛地鐵列車（Hitachi Rail Italy Driverless Metro）是臺北捷運路網繼文湖線之後第二套引進的全自動無人駕駛中運量捷運系統.</p>
+                                  <p>接受主變電站22仟伏電力，轉換為直流750伏特電力提供電聯車用電。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545238089_0b931f2920.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53670976650_a0f78c1316_n.jpg)">
                               <div class="inner">
-                                  <p>供電說明4</p>
-                    <span>2020-</span>
+                                  <p>電力遙控系統</p>
+                    <span>PRC</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>屬於台中捷運的中運量動力分散式電聯車，由日本川崎重工及台灣車輛共同承造，川崎重工製造01~04號、23~36號，台灣車輛製造05~22號，合計生產18列36輛，於2017年2月5日首度公開</p>
+                                  <p>監視及控制各項電力設備運轉狀態，並可依據訊息判斷事故及應變。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642318378_8fd1dfaa4f_m.jpg">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53670976715_1750bbc105_n.jpg">
                               <div class="inner">
-                                  <p>供電說明5</p>
-                    <span>1992-</span>
+                                  <p>電纜</p>
+                    <span>CABLE</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>台北捷運301型電聯車，簡稱C301型電聯車.是一款台北捷運的直流電通勤電聯車，為台灣第一種行駛於標準軌之列車.</p>
+                                  <p>捷運設有161仟伏、22仟伏、1仟伏直流及低壓控制電纜。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545103748_0cb41ece0c.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53670878994_aebddbe01a_n.jpg)">
                               <div class="inner">
-                                  <p>供電說明6</p>
-                    <span>2003-</span>
+                                  <p>柴油引擎發電機組</p>
+                    <span>GEN</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>2003年台北捷運公司舉行增備南港線東延段、新莊線、蘆洲線和小碧潭支線321輛列車招標；龐巴迪運輸、西門子及川崎重工參與競標，最終川崎重工得標.</p>
+                                  <p>當全路網主變電站無電力可用時，供應全線車站緊急電力。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53641215022_0a9287749e_w.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53670879039_b3646dcc72_n.jpg)">
                               <div class="inner">
-                                  <p>供電說明7</p>
-                    <span>2008-</span>
+                                  <p>緊急跳脫站</p>
+                    <span>ETS</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>製造廠商：日本川崎重工 Kawasaki
-                  出廠年份：2006~2007 列車編組：2組6節運轉 DM1-T-M2 x2                          ( DM1: 駕駛馬達車 T: 拖車 M2: 馬達車 )現役車數：19列 (38組).</p>
+                                  <p>因應緊急突發狀況可立即中斷電聯車電力來源。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642274903_8bce108c46_b.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53670526596_180f3024e4_n.jpg)">
                               <div class="inner">
-                                  <p>供電說明8</p>
-                    <span>2010-</span>
+                                  <p>不斷電系統</p>
+                    <span>UPS</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>製造廠商：日本川崎/台灣車輛 TRSC 出廠年份：2010~2013
-                  列車編組：2組6節運轉 DM1-T-M2 x2 ( DM1: 駕駛馬達車 T: 拖車 M2: 馬達車 )現役車數：24列 (48組).</p>
+                                  <p>提供重要機電系統穩定之380伏特及220伏特電力.</p>
                               </div>
                           </div>
                       </div>
