--- a/autofare.html
+++ b/autofare.html
@@ -12,106 +12,105 @@
         <div class="cols">
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545330190_e179a70637.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53677965790_1df8304f51_n.jpg)">
                               <div class="inner">
-                                  <p>自動收費說明1</p>
-                    <span>1996-</span>
+                                  <p>中央資料處理機系統</p>
+                    <span>abc</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                <p>臺北捷運最早營運的列車類型，行駛於文湖線。列車編制為兩輛一對，一對一個編號。非固定編組連號共四輛為一列。使用膠輪，行駛於中運量膠輪系統專用軌道。</p>
+                                <p>設於臺北捷運行控中心站務處票證中心內，連接各營運車站，具整合全路網自動收費系統營運及稽核、監督、控制、管理和計畫等功能。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image:url(https://live.staticflickr.com/65535/53641202607_ed01b24ffc_q.jpg)">
+                          <div class="front" style="background-image:url(https://live.staticflickr.com/65535/53677734108_9904a39b8e_n.jpg)">
                               <div class="inner">
-                                  <p>自動收費說明2</p>
-                    <span>2006-</span>
+                                  <p>車站處理機系統</p>
+                    <span>ABC</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>INNOVIA APM 256型由美國的茲堡廠製造，共有101對（202輛）。其中51對在唐榮車輛科技股份有限公司做最後組裝，採用加拿大龐巴迪運輸機電號誌系統.</p>
+                                  <p>接收連線之中央資料處理機系統傳來之營運參數資料及軟體程式，下載至車站設備，蒐集並處理車站內各自動收費設備上傳交易資料，使站內所有自動收費設備之日期及時間同步。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642535460_fbb1301767.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53677735583_005a87ff5f_n.jpg)">
                               <div class="inner">
-                                  <p>自動收費說明3</p>
+                                  <p>錢幣計數袋裝設備</p>
                     <span>2020-</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>日立軌道義大利無人駕駛地鐵列車（Hitachi Rail Italy Driverless Metro）是臺北捷運路網繼文湖線之後第二套引進的全自動無人駕駛中運量捷運系統.</p>
+                                  <p>點數自動售票/加值機硬幣盒所收集之硬幣，設備與車站處理機系統連接，現金點數金額經車站處理機上傳系統中央資料處理機系統匯整為營運收入金額，並能依點數幣值自動進行裝袋作業，以利運送存入銀行。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545238089_0b931f2920.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53677739023_c49426e68f_m.jpg)">
                               <div class="inner">
-                                  <p>自動收費說明4</p>
+                                  <p>自動收費閘門</p>
                     <span>2020-</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>屬於台中捷運的中運量動力分散式電聯車，由日本川崎重工及台灣車輛共同承造，川崎重工製造01~04號、23~36號，台灣車輛製造05~22號，合計生產18列36輛，於2017年2月5日首度公開</p>
+                                  <p>作為旅客進出車站付費區之管制，自動收費閘門採二組伸縮式門檔組（barrier type ）設計，自動收費閘門分進站、出站及雙向功能之自動收費閘門，並可自動偵測有大人陪同進站身高115(含)公分以下免票孩童進站，一般通道500mm寬度，亦提供無障礙收費閘門1100mm之通道寬度。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642318378_8fd1dfaa4f_m.jpg">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53677521161_6558386c0a_m.jpg">
                               <div class="inner">
-                                  <p>自動收費說明5</p>
+                                  <p>自動售票/加值機</p>
                     <span>1992-</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>台北捷運301型電聯車，簡稱C301型電聯車.是一款台北捷運的直流電通勤電聯車，為台灣第一種行駛於標準軌之列車.</p>
+                                  <p>接受多重票。供旅客購買單程票及基北北桃都會通(TPASS)，並提供以儲值票進行加值之自動售票/加值機，並提供12國語音導引供國外觀光客使用，並提供無障礙使用者之需求。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545103748_0cb41ece0c.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53677878314_df3a496eb9_m.jpg)">
                               <div class="inner">
-                                  <p>自動收費說明6</p>
+                                  <p>站務員售票機</p>
                     <span>2003-</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>2003年台北捷運公司舉行增備南港線東延段、新莊線、蘆洲線和小碧潭支線321輛列車招標；龐巴迪運輸、西門子及川崎重工參與競標，最終川崎重工得標.</p>
+                                  <p>提供站務員以人工操作發售車票給旅客，並可提供旅客車票補票加值及退費等功能，站務員能藉由本設備監視與控制車站內自動收費設備，亦可顯示車站內自動收費設備之故障及異常訊息，以利檢修。</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                       <div class="container">
-                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53641215022_0a9287749e_w.jpg)">
+                          <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53677880374_30c5f5d893_m.jpg)">
                               <div class="inner">
-                                  <p>自動收費說明7</p>
+                                  <p>查詢機</p>
                     <span>2008-</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>製造廠商：日本川崎重工 Kawasaki
-                  出廠年份：2006~2007 列車編組：2組6節運轉 DM1-T-M2 x2                          ( DM1: 駕駛馬達車 T: 拖車 M2: 馬達車 )現役車數：19列 (38組).</p>
+                                  <p>提供旅客查詢車票餘額、交易資料或有效期限等資料，判斷此車票是否可用。對悠遊卡票亦提供押金調整、溢扣返還、社福票到期展期及學生票開啟處理功能。</p>
                               </div>
                           </div>
                       </div>
@@ -126,8 +125,7 @@
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>製造廠商：日本川崎/台灣車輛 TRSC 出廠年份：2010~2013
-                  列車編組：2組6節運轉 DM1-T-M2 x2 ( DM1: 駕駛馬達車 T: 拖車 M2: 馬達車 )現役車數：24列 (48組).</p>
+                                  <p>製造廠商：日本川崎/台灣車輛 TRSC 出廠年份：2010~2013 列車編組：2組6節運轉 DM1-T-M2 x2 ( DM1: 駕駛馬達車 T: 拖車 M2: 馬達車 )現役車數：24列 (48組).</p>
                               </div>
                           </div>
                       </div>
