--- a/depot.html
+++ b/depot.html
@@ -14,13 +14,13 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545330190_e179a70637.jpg)">
                               <div class="inner">
-                                  <p>功能</p>
-                    <span>1999-</span>
+                                  <p>起重設備</p>
+                    <span>分為架空式移動起重機、伸臂式起重機、單軌起重機</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                <p>具有電聯車之車體、轉向架及其所屬配備之大修維護功能外，亦提供號誌系統、自動收費、通信和電子等支援系統之維修功能。</p>
+                                <p>主要功能為吊運、廠內移動、裝機等。依據各維修區域性質及維修對象使用適當式樣之起重設備。如針對電聯車置頂空調之吊裝維修，適合採用單軌式起重機。</p>
                               </div>
                           </div>
                       </div>
@@ -29,13 +29,13 @@
                       <div class="container">
                           <div class="front" style="background-image:url(https://live.staticflickr.com/65535/53641202607_ed01b24ffc_q.jpg)">
                               <div class="inner">
-                                  <p>機廠說明2</p>
-                    <span>2006-</span>
+                                  <p>壓縮空氣系統</p>
+                    <span>考量廠內維修之便利性，於空壓機房內設置低壓機組，提供壓縮空氣及快速接頭供氣動工具之檢修作業使用。</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>INNOVIA APM 256型由美國的茲堡廠製造，共有101對（202輛）。其中51對在唐榮車輛科技股份有限公司做最後組裝，採用加拿大龐巴迪運輸機電號誌系統.</p>
+                                  <p>若電聯車為氣壓式剎車系統，則可配合高壓機組以測試電聯車之氣壓式剎車系統測試用。</p>
                               </div>
                           </div>
                       </div>
@@ -44,13 +44,13 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642535460_fbb1301767.jpg)">
                               <div class="inner">
-                                  <p>機廠說明3</p>
-                    <span>2020-</span>
+                                  <p>固定式頂升設備及旋轉台</p>
+                    <span>頂升設備可頂起列車執行車底組件及轉向架之拆裝/檢修作業</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>日立軌道義大利無人駕駛地鐵列車（Hitachi Rail Italy Driverless Metro）是臺北捷運路網繼文湖線之後第二套引進的全自動無人駕駛中運量捷運系統.</p>
+                                  <p>並透過旋轉台將拆卸後轉向架移至轉向架維修區。</p>
                               </div>
                           </div>
                       </div>
@@ -59,13 +59,13 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545238089_0b931f2920.jpg)">
                               <div class="inner">
-                                  <p>機廠說明4</p>
-                    <span>2020-</span>
+                                  <p>輪軸壓床</p>
+                    <span>主要透過液壓裝置及合適之治具</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>屬於台中捷運的中運量動力分散式電聯車，由日本川崎重工及台灣車輛共同承造，川崎重工製造01~04號、23~36號，台灣車輛製造05~22號，合計生產18列36輛，於2017年2月5日首度公開</p>
+                                  <p>將車軸與齒輪箱組或軸承箱組進行安裝或拆卸等功能，以更換新車輪軸組。</p>
                               </div>
                           </div>
                       </div>
@@ -74,13 +74,13 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642318378_8fd1dfaa4f_m.jpg">
                               <div class="inner">
-                                  <p>機廠說明5</p>
-                    <span>1992-</span>
+                                  <p>滑動供電系統</p>
+                    <span>配置集電滑車組搭配電纜及插頭</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>台北捷運301型電聯車，簡稱C301型電聯車.是一款台北捷運的直流電通勤電聯車，為台灣第一種行駛於標準軌之列車.</p>
+                                  <p>以DC750V牽引電力替代三軌，供應電聯車機廠內行駛或測試用電。</p>
                               </div>
                           </div>
                       </div>
@@ -89,13 +89,13 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53545103748_0cb41ece0c.jpg)">
                               <div class="inner">
-                                  <p>機廠說明6</p>
-                    <span>2003-</span>
+                                  <p>地下車輪切削系統與牽引電動車</p>
+                    <span>在不需拆卸轉向架之情形下，透過牽引電動車拖拉列車</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>2003年台北捷運公司舉行增備南港線東延段、新莊線、蘆洲線和小碧潭支線321輛列車招標；龐巴迪運輸、西門子及川崎重工參與競標，最終川崎重工得標.</p>
+                                  <p>並針對已磨損或異常之鋼輪踏面進行鋼輪車削，以降低行駛時產生之振動與噪音。</p>
                               </div>
                           </div>
                       </div>
@@ -104,14 +104,13 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53641215022_0a9287749e_w.jpg)">
                               <div class="inner">
-                                  <p>機廠說明7</p>
-                    <span>2008-</span>
+                                  <p>列車清洗系統</p>
+                    <span>功能為清洗列車外觀，分為列車穿越式及列車固定式兩種洗車模式</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>製造廠商：日本川崎重工 Kawasaki
-                  出廠年份：2006~2007 列車編組：2組6節運轉 DM1-T-M2 x2                          ( DM1: 駕駛馬達車 T: 拖車 M2: 馬達車 )現役車數：19列 (38組).</p>
+                                  <p>其設置機房、控制室、管線閥類配件及相關附屬設施，如各式電動旋轉刷組、管線及噴嘴與附屬鋼構支架、軌道接觸式開關等設施。</p>
                               </div>
                           </div>
                       </div>
@@ -120,14 +119,13 @@
                       <div class="container">
                           <div class="front" style="background-image: url(https://live.staticflickr.com/65535/53642274903_8bce108c46_b.jpg)">
                               <div class="inner">
-                                  <p>機廠說明8</p>
-                    <span>2010-</span>
+                                  <p>軌道特種車輛</p>
+                    <span>用以執行軌道保修、清洗、救援電聯車等任務</span>
                               </div>
                           </div>
                           <div class="back">
                               <div class="inner">
-                                  <p>製造廠商：日本川崎/台灣車輛 TRSC 出廠年份：2010~2013
-                  列車編組：2組6節運轉 DM1-T-M2 x2 ( DM1: 駕駛馬達車 T: 拖車 M2: 馬達車 )現役車數：24列 (48組).</p>
+                                  <p>並具備與電聯車相容之連結器，柴油引擎作為動力，可在公路或軌道上行駛執行相關作業。</p>
                               </div>
                           </div>
                       </div>
